Added Google Colab instructions to visual behavior notebooks. Added Colab links documentation

--- a/doc_template/examples_root/examples/nb/visual_behavior_compare_across_trial_types.ipynb
+++ b/doc_template/examples_root/examples/nb/visual_behavior_compare_across_trial_types.ipynb
@@ -5,19 +5,42 @@
    "metadata": {},
    "source": [
     "# Example behavior and ophys data\n",
-    "The following example shows how to access behavioral data for a given recording session and how to align with corresponding neural data\n",
-    "\n",
-    "The following assumes that the AllenSDK has been installed in your environment. If not, run:\n",
-    "\n",
-    "    pip install allensdk\n"
+    "The following example shows how to access behavioral data for a given recording session and how to align with corresponding neural data"
    ]
   },
   {
+   "source": [
+    "We will first install allensdk into our colab environment by running the commands below. \n",
+    "\n",
+    "If using Google Colab, click on the RESTART RUNTIME button that appears at the end of the output when this cell is complete,. Note that running this cell will produce a long list of outputs and some error messages. Clicking RESTART RUNTIME at the end will resolve these issues.\n",
+    "You can minimize the cell after you are done to hide the output."
+   ],
    "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "## Install AllenSDK"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install --upgrade pip\n",
+    "!pip install allensdk"
+   ]
+  },
+  {
    "source": [
     "## Imports"
-   ]
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
