--- a/doc_template/examples_root/examples/nb/visual_behavior_load_ophys_data.ipynb
+++ b/doc_template/examples_root/examples/nb/visual_behavior_load_ophys_data.ipynb
@@ -15,10 +15,44 @@
    ]
   },
   {
+   "source": [
+    "We will first install allensdk into our colab environment by running the commands below. \n",
+    "\n",
+    "If using Google Colab, click on the RESTART RUNTIME button that appears at the end of the output when this cell is complete,. Note that running this cell will produce a long list of outputs and some error messages. Clicking RESTART RUNTIME at the end will resolve these issues.\n",
+    "You can minimize the cell after you are done to hide the output."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "## Install AllenSDK"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install --upgrade pip\n",
+    "!pip install allensdk"
+   ]
+  },
+  {
+   "source": [
+    "## Import required libraries"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First, we need to import libraries for plotting and manipulating data"
+    "We need to import libraries for plotting and manipulating data"
    ]
   },
   {
