--- a/doc_template/examples_root/examples/nb/visual_behavior_mouse_history.ipynb
+++ b/doc_template/examples_root/examples/nb/visual_behavior_mouse_history.ipynb
@@ -7,16 +7,34 @@
     "# Example behavior session\n",
     "The following example shows how to access behavioral data for a given mouse across sessions\n",
     "\n",
-    "The following assumes that the AllenSDK has been installed in your environment. If not, run:\n",
+    "We will first install allensdk into our colab environment by running the commands below. \n",
     "\n",
-    "    pip install allensdk"
+    "If using Google Colab, click on the RESTART RUNTIME button that appears at the end of the output when this cell is complete,. Note that running this cell will produce a long list of outputs and some error messages. Clicking RESTART RUNTIME at the end will resolve these issues.\n",
+    "You can minimize the cell after you are done to hide the output."
+   ]
+  },
+  {
+   "source": [
+    "## Install AllenSDK"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install --upgrade pip\n",
+    "!pip install allensdk"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## imports"
+    "## Imports"
    ]
   },
   {
@@ -611,7 +629,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## randomly select one mouse\n",
+    "## Select one mouse\n",
     "We'll choose one mouse id from the full list of unique mouse IDs in the dataset"
    ]
   },
@@ -632,8 +650,7 @@
     }
    ],
    "source": [
-    "np.random.seed(5)\n",
-    "mouse_id = np.random.choice(behavior_session_table['mouse_id'].unique())\n",
+    "mouse_id = behavior_session_table['mouse_id'].unique()[76]\n",
     "mouse_id"
    ]
   },
