--- a/doc_template/examples_root/examples/nb/visual_behavior_ophys_data_access.ipynb
+++ b/doc_template/examples_root/examples/nb/visual_behavior_ophys_data_access.ipynb
@@ -55,8 +55,37 @@
     "\n",
     "When you need to access the data in subsequent analysis sessions, you should point the `VisualBehaviorOphysProjectCache` object to an existing cache directory; otherwise, it will try to re-download the data in a new location.\n",
     "\n",
-    "To get started with this approach, first take care of the necessary imports:"
+    "To get started with this approach, first take care of the necessary imports:\n",
+    "\n",
+    "We will first install allensdk into our colab environment by running the commands below. \n",
+    "\n",
+    "If using Google Colab, click on the RESTART RUNTIME button that appears at the end of the output when this cell is complete,. Note that running this cell will produce a long list of outputs and some error messages. Clicking RESTART RUNTIME at the end will resolve these issues.\n",
+    "You can minimize the cell after you are done to hide the output."
    ]
+  },
+  {
+   "source": [
+    "## Install AllenSDK"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install --upgrade pip\n",
+    "!pip install allensdk"
+   ]
+  },
+  {
+   "source": [
+    "## Install required packages"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
