--- a/doc_template/examples_root/examples/nb/visual_behavior_load_ophys_data.ipynb
+++ b/doc_template/examples_root/examples/nb/visual_behavior_load_ophys_data.ipynb
@@ -55,7 +55,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can install AllenSDK into your notebook enviroment by executing the cell below.\n",
+    "You can install AllenSDK into your notebook environment by executing the cell below.\n",
     "\n",
     "If using Google Colab, click on the RESTART RUNTIME button that appears at the end of the output when this cell is complete,. Note that running this cell will produce a long list of outputs and some error messages. Clicking RESTART RUNTIME at the end will resolve these issues.\n",
     "You can minimize the cell after you are done to hide the output."
