point vbn quality metrics notebook to vbn data access notebook

--- a/doc_template/examples_root/examples/nb/visual_behavior_neuropixels_quality_metrics.ipynb
+++ b/doc_template/examples_root/examples/nb/visual_behavior_neuropixels_quality_metrics.ipynb
@@ -12,7 +12,7 @@
     "\n",
     "To help you avoid these pitfalls, this tutorial will explore how these metrics are calculated, how they can be biased, and how they should be applied to specific use cases. It's important to keep in mind that none of these metrics are perfect, and that the use of unit quality metrics for filtering ephys data is still an evolving area of research. More work  is required in order to establish general-purpose best practices and standards in this domain.\n",
     "\n",
-    "This tutorial assumes you've already created a data cache, or are working with the files on AWS. If you haven't reached that step yet, we recommend going through the [data access tutorial](./ecephys_data_access.ipynb) first.\n",
+    "This tutorial assumes you've already created a data cache, or are working with the files on AWS. If you haven't reached that step yet, we recommend going through the [data access tutorial](./visual_behavior_neuropixels_data_access.ipynb) first.\n",
     "\n",
     "Functions related to data analysis will be covered in other tutorials. For a full list of available tutorials, see the [SDK documentation] (****NEED LINK)."
    ]
