--- a/doc_template/examples_root/examples/nb/visual_behavior_neuropixels_quality_metrics.ipynb
+++ b/doc_template/examples_root/examples/nb/visual_behavior_neuropixels_quality_metrics.ipynb
@@ -8,13 +8,15 @@
     "\n",
     "## Tutorial overview\n",
     "\n",
+    "**Note**: We have changed the default behavior of the SDK from the Visual Coding Neuropixels dataset. We now return *all* units by default, without filtering based on waveform `quality` or other metrics. We leave this filtering to the user. Applying these metrics is an important part of any analysis pipeline and we encourage users to use this notebook and the linked resources to get a thorough understanding of what quality metric filters their analyses require.\n",
+    "\n",
     "This Jupyter notebook will provide a detailed explanation of the unit quality metrics included in the Allen Institute Neuropixels Visual Behavior dataset. It's important to pay attention to quality metrics, because failing to apply them correctly could lead to invalid scientific conclusions, or could end up hiding potentially useful data.\n",
     "\n",
     "To help you avoid these pitfalls, this tutorial will explore how these metrics are calculated, how they can be biased, and how they should be applied to specific use cases. It's important to keep in mind that none of these metrics are perfect, and that the use of unit quality metrics for filtering ephys data is still an evolving area of research. More work  is required in order to establish general-purpose best practices and standards in this domain.\n",
     "\n",
     "This tutorial assumes you've already created a data cache, or are working with the files on AWS (Simple Storage Service (S3) bucket: [visual-behavior-neuropixels-data](https://s3.console.aws.amazon.com/s3/buckets/visual-behavior-neuropixels-data)). If you haven't reached that step yet, we recommend going through the [data access tutorial](./visual_behavior_neuropixels_data_access.ipynb) first.\n",
     "\n",
-    "Functions related to data analysis will be covered in other tutorials. For a full list of available tutorials, see the [SDK documentation](https://allensdk.readthedocs.io/en/latest/visual_behavior_neuropixels.html)."
+    "Functions related to data analysis will be covered in other tutorials. For a full list of available tutorials, see the [SDK documentation](https://allensdk.readthedocs.io/en/latest/visual_behavior_neuropixels.html).\n"
    ]
   },
   {
