--- a/doc_template/examples_root/examples/nb/mouse_connectivity.ipynb
+++ b/doc_template/examples_root/examples/nb/mouse_connectivity.ipynb
@@ -2,7 +2,11 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## Mouse Connectivity\n",
     "\n",
@@ -15,8 +19,93 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from pathlib import Path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "output_dir = '.'"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "from allensdk.core.mouse_connectivity_cache import MouseConnectivityCache\n",
+    "\n",
+    "# The manifest file is a simple JSON file that keeps track of all of\n",
+    "# the data that has already been downloaded onto the hard drives.\n",
+    "# If you supply a relative path, it is assumed to be relative to your\n",
+    "# current working directory.\n",
+    "mcc = MouseConnectivityCache(manifest_file=Path(output_dir) / 'manifest.json')\n",
+    "\n",
+    "# open up a list of all of the experiments\n",
+    "all_experiments = mcc.get_experiments(dataframe=True)\n",
+    "print(\"%d total experiments\" % len(all_experiments))\n",
+    "\n",
+    "# take a look at what we know about an experiment with a primary motor injection\n",
+    "all_experiments.loc[122642490]"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "from allensdk.core.mouse_connectivity_cache import MouseConnectivityCache\n",
+    "\n",
+    "# The manifest file is a simple JSON file that keeps track of all of\n",
+    "# the data that has already been downloaded onto the hard drives.\n",
+    "# If you supply a relative path, it is assumed to be relative to your\n",
+    "# current working directory.\n",
+    "mcc = MouseConnectivityCache(manifest_file=Path(output_dir) / 'manifest.json')\n",
+    "\n",
+    "# open up a list of all of the experiments\n",
+    "all_experiments = mcc.get_experiments(dataframe=True)\n",
+    "print(\"%d total experiments\" % len(all_experiments))\n",
+    "\n",
+    "# take a look at what we know about an experiment with a primary motor injection\n",
+    "all_experiments.loc[122642490]"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -59,7 +148,7 @@
     "# the data that has already been downloaded onto the hard drives.\n",
     "# If you supply a relative path, it is assumed to be relative to your\n",
     "# current working directory.\n",
-    "mcc = MouseConnectivityCache()\n",
+    "mcc = MouseConnectivityCache(manifest_file=Path(output_dir) / 'manifest.json')\n",
     "\n",
     "# open up a list of all of the experiments\n",
     "all_experiments = mcc.get_experiments(dataframe=True)\n",
@@ -71,7 +160,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "`MouseConnectivityCache` has a method for retrieving the adult mouse structure tree as an `StructureTree` class instance. This is a wrapper around a list of dictionaries, where each dictionary describes a structure. It is principally useful for looking up structures by their properties."
    ]
@@ -79,7 +172,11 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -159,7 +256,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "As a convenience, structures are grouped in to named collections called \"structure sets\". These sets can be used to quickly gather a useful subset of structures from the tree. The criteria used to define structure sets are eclectic; a structure set might list:\n",
     "\n",
@@ -173,7 +274,11 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -482,7 +587,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "On the connectivity atlas web site, you'll see that we show most of our data at a fairly coarse structure level. We did this by creating a structure set of ~300 structures, which we call the \"summary structures\". We can use the structure tree to get all of the structures in this set:"
    ]
@@ -490,7 +599,11 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1456,7 +1569,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "This is how you can filter experiments by transgenic line:"
    ]
@@ -1464,7 +1581,11 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1493,7 +1614,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## Structure Signal Unionization\n",
     "\n",
@@ -1503,7 +1628,11 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1533,7 +1662,11 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1727,7 +1860,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "This is a rather large table, even for a relatively small number of experiments.  You can filter it down to a smaller list of structures like this."
    ]
@@ -1735,7 +1872,11 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -2334,7 +2475,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## Generating a Projection Matrix\n",
     "The `MouseConnectivityCache` class provides a helper method for converting ProjectionStructureUnionize records for a set of experiments and structures into a matrix.  This code snippet demonstrates how to make a matrix of projection density values in auditory sub-structures for cre-negative VISp experiments. "
@@ -2343,7 +2488,11 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -2396,7 +2545,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## Manipulating Grid Data\n",
     "\n",
@@ -2408,7 +2561,11 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# we'll take this experiment - an injection into the primary somatosensory - as an example\n",
@@ -2418,7 +2575,11 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -2456,7 +2617,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "Once you have these loaded, you can use matplotlib see what they look like."
    ]
@@ -2465,6 +2630,9 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    },
     "scrolled": true
    },
    "outputs": [
@@ -2503,7 +2671,11 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -2538,7 +2710,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "On occasion the TissueCyte microscope fails to acquire a tile. In this case the data from that tile should not be used for analysis. The data mask associated with each experiment can be used to determine which portions of the grid data came from correctly acquired tiles.\n",
     "\n",
@@ -2548,7 +2724,11 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -2572,6 +2752,7 @@
   }
  ],
  "metadata": {
+  "celltoolbar": "Tags",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
@@ -2587,7 +2768,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
