--- a/doc_template/examples_root/examples/nb/receptive_fields.ipynb
+++ b/doc_template/examples_root/examples/nb/receptive_fields.ipynb
@@ -22,6 +22,7 @@
     "import allensdk.brain_observatory.receptive_field_analysis.visualization as rfvis\n",
     "import allensdk.brain_observatory.receptive_field_analysis.receptive_field as rf\n",
     "import matplotlib.pyplot as plt\n",
+    "from pathlib import Path\n",
     "%matplotlib inline"
    ]
   },
@@ -30,6 +31,19 @@
    "metadata": {},
    "source": [
     "Given a cell of interest, we now identify the experiment that contains the locally sparse noise stimulus and download its NWB file.  We also look in the NWB file to figure out the position/index of the cell that has the ID we're interested in."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "parameters"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "output_dir = '.'"
    ]
   },
   {
@@ -48,7 +62,8 @@
    "source": [
     "cell_specimen_id = 587377366\n",
     "\n",
-    "boc = BrainObservatoryCache()\n",
+    "boc =  BrainObservatoryCache(\n",
+    "    manifest_file=str(Path(output_dir) / 'brain_observatory_manifest.json'))\n",
     "\n",
     "exps = boc.get_ophys_experiments(cell_specimen_ids=[cell_specimen_id],\n",
     "                                 stimuli=['locally_sparse_noise'])\n",
@@ -392,22 +407,23 @@
   }
  ],
  "metadata": {
+  "celltoolbar": "Tags",
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.15"
+   "pygments_lexer": "ipython3",
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
