--- a/doc_template/examples_root/examples/nb/visual_behavior_load_ophys_data.ipynb
+++ b/doc_template/examples_root/examples/nb/visual_behavior_load_ophys_data.ipynb
@@ -41,7 +41,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pip install allensdk"
+    "!pip install allensdk"
    ]
   },
   {
@@ -158,6 +158,19 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "parameters"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "output_dir = r'\\Data\\visual_behavior_ophys_cache_dir'"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "metadata": {
     "scrolled": false
@@ -193,10 +206,7 @@
     }
    ],
    "source": [
-    "\n",
-    "my_cache_dir = r'\\Data\\visual_behavior_ophys_cache_dir'\n",
-    "\n",
-    "bc = bpc.VisualBehaviorOphysProjectCache.from_s3_cache(cache_dir=my_cache_dir)\n",
+    "bc = bpc.VisualBehaviorOphysProjectCache.from_s3_cache(cache_dir=output_dir)\n",
     "\n",
     "behavior_session_table = bc.get_behavior_session_table()  \n",
     "ophys_session_table = bc.get_ophys_session_table()   \n",
@@ -2531,10 +2541,11 @@
   }
  ],
  "metadata": {
+  "celltoolbar": "Tags",
   "kernelspec": {
-   "display_name": "visual_behavior_sdk",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "visual_behavior_sdk"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2546,7 +2557,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
