--- a/doc_template/examples_root/examples/nb/aligning_behavioral_data_to_task_events_with_the_stimulus_and_trials_tables.ipynb
+++ b/doc_template/examples_root/examples/nb/aligning_behavioral_data_to_task_events_with_the_stimulus_and_trials_tables.ipynb
@@ -57,15 +57,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "parameters"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "# Update this to a valid directory in your filesystem. This is where the data will be stored.\n",
+    "output_dir = \"/path/to/vbn_cache\""
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Update this to a valid directory in your filesystem. This is where the data will be stored.\n",
-    "cache_dir = Path(\"/path/to/vbn_cache\")\n",
-    "\n",
     "cache = VisualBehaviorNeuropixelsProjectCache.from_s3_cache(\n",
-    "            cache_dir=cache_dir)\n",
+    "            cache_dir=Path(output_dir))\n",
     "\n",
     "ecephys_sessions_table = cache.get_ecephys_session_table()"
    ]
@@ -1699,8 +1710,9 @@
   }
  ],
  "metadata": {
+  "celltoolbar": "Tags",
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1714,7 +1726,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.8.3"
   },
   "vscode": {
    "interpreter": {
