--- a/doc_template/examples_root/examples/nb/brain_observatory_monitor.ipynb
+++ b/doc_template/examples_root/examples/nb/brain_observatory_monitor.ipynb
@@ -11,6 +11,28 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pathlib import Path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "parameters"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "output_dir = '.'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -23,7 +45,8 @@
     "import numpy as np\n",
     "import allensdk.brain_observatory.stimulus_info as si\n",
     "from allensdk.core.brain_observatory_cache import BrainObservatoryCache\n",
-    "boc =  BrainObservatoryCache()"
+    "boc =  BrainObservatoryCache(\n",
+    "    manifest_file=str(Path(output_dir) / 'brain_observatory_manifest.json'))"
    ]
   },
   {
@@ -383,22 +406,23 @@
   }
  ],
  "metadata": {
+  "celltoolbar": "Tags",
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "pygments_lexer": "ipython3",
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
