--- a/doc_template/examples_root/examples/nb/cell_specimen_mapping.ipynb
+++ b/doc_template/examples_root/examples/nb/cell_specimen_mapping.ipynb
@@ -22,6 +22,28 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pathlib import Path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "tags": [
+     "parameters"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "output_dir = '.'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -52,7 +74,7 @@
     "\n",
     "api = BrainObservatoryApi()\n",
     "\n",
-    "table = api.get_cell_specimen_id_mapping(\"./cell_mapping_table.csv\")\n",
+    "table = api.get_cell_specimen_id_mapping(Path(output_dir) / \"cell_mapping_table.csv\")\n",
     "\n",
     "table.info()"
    ]
@@ -160,7 +182,8 @@
     "from matplotlib.colors import ListedColormap\n",
     "%matplotlib inline\n",
     "\n",
-    "boc = BrainObservatoryCache()\n",
+    "boc =  BrainObservatoryCache(\n",
+    "    manifest_file=str(Path(output_dir) / 'brain_observatory_manifest.json'))\n",
     "\n",
     "cell_ids = {}\n",
     "cell_ids[\"three_session_B\"] = int(table[table.old_cell_id == old_cell_id].session_B_new_cell_id)\n",
@@ -266,22 +289,23 @@
   }
  ],
  "metadata": {
+  "celltoolbar": "Tags",
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.15"
+   "pygments_lexer": "ipython3",
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
