--- a/doc_template/examples_root/examples/nb/ecephys_quality_metrics.ipynb
+++ b/doc_template/examples_root/examples/nb/ecephys_quality_metrics.ipynb
@@ -92,14 +92,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "parameters"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "# Example cache directory path, it determines where downloaded data will be stored\n",
+    "output_dir = '/local1/ecephys_cache_dir/'"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Example cache directory path, it determines where downloaded data will be stored\n",
-    "data_directory = '/local1/ecephys_cache_dir/'\n",
-    "\n",
-    "manifest_path = os.path.join(data_directory, \"manifest.json\")\n",
+    "manifest_path = os.path.join(output_dir, \"manifest.json\")\n",
     "\n",
     "cache = EcephysProjectCache.from_warehouse(manifest=manifest_path)\n",
     "\n",
@@ -1062,8 +1073,9 @@
   }
  ],
  "metadata": {
+  "celltoolbar": "Tags",
   "kernelspec": {
-   "display_name": "Python (allensdk)",
+   "display_name": "allensdk",
    "language": "python",
    "name": "allensdk"
   },
@@ -1077,7 +1089,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.8.0"
   }
  },
  "nbformat": 4,
