--- a/doc_template/examples_root/examples/nb/visual_behavior_neuropixels_quality_metrics.ipynb
+++ b/doc_template/examples_root/examples/nb/visual_behavior_neuropixels_quality_metrics.ipynb
@@ -103,14 +103,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "parameters"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "# Update this to a valid directory in your filesystem. This is where the data will be stored.\n",
+    "output_dir = \"/path/to/vbn_cache\""
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Update this to a valid directory in your filesystem. This is where the data will be stored.\n",
-    "cache_dir = Path(\"/path/to/vbn_cache\")\n",
-    "\n",
-    "cache = VisualBehaviorNeuropixelsProjectCache.from_s3_cache(cache_dir=cache_dir)"
+    "cache = VisualBehaviorNeuropixelsProjectCache.from_s3_cache(cache_dir=Path(output_dir))"
    ]
   },
   {
@@ -1438,8 +1449,9 @@
   }
  ],
  "metadata": {
+  "celltoolbar": "Tags",
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1453,7 +1465,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
