--- a/doc_template/examples_root/examples/nb/visual_behavior_neuropixels_quickstart.ipynb
+++ b/doc_template/examples_root/examples/nb/visual_behavior_neuropixels_quickstart.ipynb
@@ -43,17 +43,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "parameters"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "# Update this to a valid directory in your filesystem. This is where the data will be stored.\n",
+    "output_dir = \"/path/to/vbn_cache\""
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 14,
    "metadata": {
     "scrolled": false
    },
    "outputs": [],
    "source": [
-    "# Update this to a valid directory in your filesystem. This is where the data will be stored.\n",
-    "cache_dir = Path(\"/path/to/vbn_cache\")\n",
-    "\n",
     "cache = VisualBehaviorNeuropixelsProjectCache.from_s3_cache(\n",
-    "            cache_dir=cache_dir)\n",
+    "            cache_dir=Path(output_dir))\n",
     "\n",
     "# get the metadata tables\n",
     "units_table = cache.get_unit_table()\n",
@@ -1030,8 +1041,9 @@
   }
  ],
  "metadata": {
+  "celltoolbar": "Tags",
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1045,7 +1057,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.8.3"
   },
   "vscode": {
    "interpreter": {
